# runtime-verification-system

./: .gitignore  CMakeLists.txt  README.md
examples/: DFA.xml  DFA_LTL.xml  bmc.smv  comp-model.xml  rvsDFA.xml  rvsDFA2.xml  rvsDFA3.xml  rvsDFA4.xml  rvsDFA4模型解释.md  rvsDFA5.xml  rvsDFA6.xml  rvsDFA7 (1).xml  rvsDFA7模型解释.md  simple-model.xml
headers/DFA/: Event.h  EventVerifyResult.h  Model.h  State.h
src/: rvsDFATestSelf.cpp
src/DFA/: Event.cpp  Model.cpp  State.cpp
